--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medium</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Medium</title>
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css" integrity="sha512-SgaqKKxJDQ/tAUAAXzvxZz33rmn7leYDYfBP+YoMRSENhf3zJyx3SBASt/OfeQwBHA1nxMis7mM3EV/oYT6Fdw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    </head>
+    <body>
+        <div class="topbar"><!--barra top della pagina-->
+            <img src="assets/img/New.Medium.Logo.webp" alt="Medium_logo">
+
+            <div class="top-right">
+                <div class="top-icons"> <!--classi icone-->
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-regular fa-bookmark"></i>
+                    <i class="fa-regular fa-bell"></i>
+                </div>
+
+                <div class="top-button">
+                    <p>Resume membership</p>
+                </div>
+
+                <div class="profile">
+                    <p>T</p>
+                </div>
+            </div>
+        </div> 
+
+
+        <div>Content</div>  <!--contenuto della pagina-->
+
+
+        <div>Sidebar</div>  <!--parte dx della pagina-->
+
+
+    </body>
 </html>
