Medium-sidebar right
-implementato la sidebar (parte destra del sito) con aggiunta di immagini e scritte;
- utilizzato flexbox e position per posizionare gli elementi nel sito.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
             <div class="top-right">
                 <div class="top-icons"> <!--classi icone-->
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <i class="fa-regular fa-bookmark"></i>
-                    <i class="fa-regular fa-bell"></i>
+                    <ion-icon class="search" name="search-outline"></ion-icon>
+                    <ion-icon class="bookmark" name="bookmarks-outline"></ion-icon>
+                    <ion-icon class="bell" name="notifications-outline"></ion-icon>
                 </div>
 
                 <div class="top-button">
@@ -30,11 +30,123 @@
         </div> 
 
 
-        <div>Content</div>  <!--contenuto della pagina-->
+        <div class="content">   <!--contenuto della pagina-->
+            content
+        </div>  
 
 
-        <div>Sidebar</div>  <!--parte dx della pagina-->
+        <div class="sidebar">   <!--parte dx della pagina-->
+            <div class="sidebar-top"> <!--parte superiore della dx della pagina-->
+                <div class="logos">
+                    <img class="medium-logo" src="assets/img/medium-logo.png" alt="medium-logo.png">
+                    <span>+</span>
+                    <img class="twitter" src="assets/img/Logo_of_Twitter.png" alt="twitter.png">
+                </div>
 
+                <div class="discover">
+                    <span>Discover Medium writers you already<br>follow on Twitter.</span>
+                </div>
 
+                <div class="twitter-connect">
+                        <img src="assets/img/Logo_of_Twitter.png" alt="twitter_logo.png">
+                        <span>Connect to Twitter</span>
+                </div>
+
+                <div class="later">
+                    <h4>Maybe Later</h4>
+                </div>
+            </div>
+
+            <div class="sidebar-mid"> <!--parte inferiore della sidebar dx-->
+                <h3>Recommended topics</h3>
+                <div class="topics-container">
+                    <div class="topics">
+                        <div class="topic">Technology</div>
+                        <div class="topic">Money</div>
+                        <div class="topic">Business</div>
+                    </div>
+                    <div class="topics">
+                        <div class="topic">Productivity</div>
+                        <div class="topic">Psychology</div>
+                    </div>
+                    <div class="topics">
+                        <div class="topic">Mindfulness</div>
+                        <div class="topic">Art</div>
+                    </div>
+                </div>
+
+                <div class="who-to-follow">
+                    <h3>Who to follow</h3>
+
+                    <div class="person"> <!--persona 1-->
+                        <img src="assets/img/persona.jpg" alt="persona.jpg">
+                        <h2>Name Surname</h2>
+                        <span class="follow">Follow</span>
+                        <p>Job, hobbies</p>
+                    </div>
+
+                    <div class="person">    <!--persona 2-->
+                        <img src="assets/img/persona.jpg" alt="persona.jpg">
+                        <h2>Name Surname</h2>
+                        <span class="follow">Follow</span>
+                        <p>Job, hobbies</p>
+                    </div>
+
+                    <div class="person">    <!--persona 3-->
+                        <img src="assets/img/persona.jpg" alt="persona.jpg">
+                        <h2>Name Surname</h2>
+                        <span class="follow">Follow</span>
+                        <p>Job, hobbies</p>
+                    </div>
+                </div>
+
+                <div class="saved">
+                    <h3>Recently Saved</h3>
+                    <div class="block1">   <!--blocco 1-->
+                        <div>
+                            <img src="assets/img/aoa.png" alt="aoa.png">
+                            <span class="grassetto">Eva Keiffenheim </span><span>in</span><span class="grassetto"> Age of Awakeness</span>
+                        </div>
+                        <div>
+                            <h3>The Feynman Technique Will Make You Remember What You Read</h3>
+                        </div>
+                        <div>
+                            <span class="art-info">Oct 2, 2020 • 6 min read ★</span>
+                        </div>
+                    </div>
+
+                    <div>   <!--blocco 2-->
+                        <div class="block2">
+                            <img src="assets/img/persona.jpg" alt="persona.jpg">
+                            <span>chrissy teigen</span>
+                        </div>
+                        <div>
+                            <h3>Hi.</h3>
+                        </div>
+                        <div>
+                            <span class="art-info">Oct 27, 2020 • 8 min read</span>
+                        </div>
+
+                        <div>   <!--colore verde-->
+                            <p class="see-all">See all (3)</p>
+                        </div>
+                    </div>
+                    <div class="bot-menu">   <!--bot menu, colore grigio-->
+                        <div>Help</div>
+                        <div>Status</div>
+                        <div>Writers</div>
+                        <div>Blog</div>
+                        <div>Careers</div>
+                        <div>Privacy</div>
+                        <div>Terms</div>
+                        <div>About</div>
+                    </div>
+                </div>
+
+            </div>
+        </div>  
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </body>
 </html>
