--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Medium</title>
         <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css" integrity="sha512-SgaqKKxJDQ/tAUAAXzvxZz33rmn7leYDYfBP+YoMRSENhf3zJyx3SBASt/OfeQwBHA1nxMis7mM3EV/oYT6Fdw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <div class="topbar"><!--barra top della pagina-->
@@ -31,7 +29,143 @@
 
 
         <div class="content">   <!--contenuto della pagina-->
-            content
+           <div class="menu-bar">
+            <h3 class="following">FOLLOWING</h3>
+            <h3 class="for-you">RECOMMENDED FOR YOU</h3>
+            <h3></h3>
+            <h3></h3>
+            <h3></h3>   <!--messi h3 vuoti per creare spazio ed utilizzare flexbox per il "menù" FOLLOWING E RECOMMENDED FOR YOU-->
+            <h3></h3>
+           </div>
+
+            <div class="article"> <!--articolo 1-->
+                <div>
+                    <img src="assets/img/aoa.png" alt="aoa.png">
+                    <span class="grassetto">Eva Keiffenheim </span><span>in</span><span class="grassetto"> Age of Awakeness</span>
+                </div>
+                <div>
+                    <h3>The Feynman Technique Will Make You Remember What You Read</h3>
+                </div>
+                <div>
+                    <p class="paragraph">At the beginning of the year if you told me I'd be publishing a<br>recommendation to use Redux I would have laughed in your face. Yet her...</p>
+                </div>
+                <div>
+                    <span class="art-info">Oct 2, 2020 • 6 min read • <span class="argument">React</span> • Popular on Medium</span>
+                    <span class="icons">
+                        <img src="assets/img/bookmark.svg" alt="bookmark.svg">
+                        <ion-icon name="ellipsis-horizontal"></ion-icon>
+                    </span>
+                </div>
+            </div>
+
+            <div class="article"> <!--articolo 2-->
+                <div>
+                    <img src="assets/img/aoa.png" alt="aoa.png">
+                    <span class="grassetto">Eva Keiffenheim </span><span>in</span><span class="grassetto"> Age of Awakeness</span>
+                </div>
+                <div>
+                    <h3>The Feynman Technique Will Make You Remember What You Read</h3>
+                </div>
+                <div>
+                    <p class="paragraph">At the beginning of the year if you told me I'd be publishing a<br>recommendation to use Redux I would have laughed in your face. Yet her...</p>
+                </div>
+                <div>
+                    <span class="art-info">Oct 2, 2020 • 6 min read • <span class="argument">React</span> • Popular on Medium</span>
+                    <span class="icons">
+                        <img src="assets/img/bookmark.svg" alt="bookmark.svg">
+                        <ion-icon name="ellipsis-horizontal"></ion-icon>
+                    </span>
+                </div>
+            </div>
+
+            <div class="article"> <!--articolo 3-->
+                <div>
+                    <img src="assets/img/aoa.png" alt="aoa.png">
+                    <span class="grassetto">Eva Keiffenheim </span><span>in</span><span class="grassetto"> Age of Awakeness</span>
+                </div>
+                <div>
+                    <h3>The Feynman Technique Will Make You Remember What You Read</h3>
+                </div>
+                <div>
+                    <p class="paragraph">At the beginning of the year if you told me I'd be publishing a<br>recommendation to use Redux I would have laughed in your face. Yet her...</p>
+                </div>
+                <div>
+                    <span class="art-info">Oct 2, 2020 • 6 min read • <span class="argument">React</span> • Popular on Medium</span>
+                    <span class="icons">
+                        <img src="assets/img/bookmark.svg" alt="bookmark.svg">
+                        <ion-icon name="ellipsis-horizontal"></ion-icon>
+                    </span>
+                </div>
+            </div>
+
+            <div class="article"> <!--articolo 4-->
+                <div>
+                    <img src="assets/img/aoa.png" alt="aoa.png">
+                    <span class="grassetto">Eva Keiffenheim </span><span>in</span><span class="grassetto"> Age of Awakeness</span>
+                </div>
+                <div>
+                    <h3>The Feynman Technique Will Make You Remember What You Read</h3>
+                </div>
+                <div>
+                    <p class="paragraph">At the beginning of the year if you told me I'd be publishing a<br>recommendation to use Redux I would have laughed in your face. Yet her...</p>
+                </div>
+                <div>
+                    <span class="art-info">Oct 2, 2020 • 6 min read • <span class="argument">React</span> • Popular on Medium</span>
+                    <span class="icons">
+                        <img src="assets/img/bookmark.svg" alt="bookmark.svg">
+                        <ion-icon name="ellipsis-horizontal"></ion-icon>
+                    </span>
+                </div>
+            </div>
+
+            <div class="article"> <!--articolo 5-->
+                <div>
+                    <img src="assets/img/aoa.png" alt="aoa.png">
+                    <span class="grassetto">Eva Keiffenheim </span><span>in</span><span class="grassetto"> Age of Awakeness</span>
+                </div>
+                <div>
+                    <h3>The Feynman Technique Will Make You Remember What You Read</h3>
+                </div>
+                <div>
+                    <p class="paragraph">At the beginning of the year if you told me I'd be publishing a<br>recommendation to use Redux I would have laughed in your face. Yet her...</p>
+                </div>
+                <div>
+                    <span class="art-info">Oct 2, 2020 • 6 min read • <span class="argument">React</span> • Popular on Medium</span>
+                    <span class="icons">
+                        <img src="assets/img/bookmark.svg" alt="bookmark.svg">
+                        <ion-icon name="ellipsis-horizontal"></ion-icon>
+                    </span>
+                </div>
+            </div>
+
+            <div class="article"> <!--articolo 6-->
+                <div>
+                    <img src="assets/img/aoa.png" alt="aoa.png">
+                    <span class="grassetto">Eva Keiffenheim </span><span>in</span><span class="grassetto"> Age of Awakeness</span>
+                </div>
+                <div>
+                    <h3>The Feynman Technique Will Make You Remember What You Read</h3>
+                </div>
+                <div>
+                    <p class="paragraph">At the beginning of the year if you told me I'd be publishing a<br>recommendation to use Redux I would have laughed in your face. Yet her...</p>
+                </div>
+                <div>
+                    <span class="art-info">Oct 2, 2020 • 6 min read • <span class="argument">React</span> • Popular on Medium</span>
+                    <span class="icons">
+                        <img src="assets/img/bookmark.svg" alt="bookmark.svg">
+                        <ion-icon name="ellipsis-horizontal"></ion-icon>
+                    </span>
+                </div>
+            </div>
+
+            <div class="images">
+                <img class="img" alt="What My Book Adaptation Taught Me About Hollywood" src="https://miro.medium.com/v2/resize:fill:200:134/1*8xYBjRNG3xP71HMtL5113g.jpeg">
+                <img alt="What My Book Adaptation Taught Me About Hollywood" src="https://miro.medium.com/v2/resize:fill:200:134/1*8xYBjRNG3xP71HMtL5113g.jpeg">
+                <img alt="What My Book Adaptation Taught Me About Hollywood" src="https://miro.medium.com/v2/resize:fill:200:134/1*8xYBjRNG3xP71HMtL5113g.jpeg">
+                <img alt="What My Book Adaptation Taught Me About Hollywood" src="https://miro.medium.com/v2/resize:fill:200:134/1*8xYBjRNG3xP71HMtL5113g.jpeg">
+                <img alt="What My Book Adaptation Taught Me About Hollywood" src="https://miro.medium.com/v2/resize:fill:200:134/1*8xYBjRNG3xP71HMtL5113g.jpeg">
+                <img alt="What My Book Adaptation Taught Me About Hollywood" src="https://miro.medium.com/v2/resize:fill:200:134/1*8xYBjRNG3xP71HMtL5113g.jpeg">
+            </div>
         </div>  
 
 
